--- a/galeria/templates/galeria/admin/change_list.html
+++ b/galeria/templates/galeria/admin/change_list.html
@@ -4,7 +4,7 @@
 {% block object-tools-items %}
 {% if not is_popup %}
 <li>
-  <a href="{% url admin:galeria_picture_zip_upload %}"
+  <a href="{% url 'admin:galeria_picture_zip_upload' %}"
      title="{% trans "Upload a ZIP archive with a set of pictures" %}">{% trans "Upload ZIP" %}</a>
 </li>
 {% endif %}
